@@ -1,5 +1,8 @@
 ver 0.15.14 (2010/??/??)
 * output_thread: fix assertion failure due to race condition in OPEN
+* decoders:
+  - mp4ff, ffmpeg: add extension ".m4b" (audio book)
+
 
 ver 0.15.13 (2010/10/10)
 * output_thread: fix race condition after CANCEL command
